--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="center-div" style="  display: grid;">
   <div style id="styledText">
-    <img id="center-img-gif" src="../../../assets/toonverse/multiBanner.png" alt="logo" height="40%" width="63%"
+    <img id="center-img-gif" src="../../../assets/logobanner.gif" alt="logo" height="40%" width="63%"
           style="border-radius: 5%" />
         <br>
     <br>
@@ -10,19 +10,17 @@
       <br>
       <br>
       Our team is excited to bring you a revolutionary new approach to art ownership and collection.
-      <br>
-      <br>
+      
       Our Tokenomics are designed to create a seamless user experience. With just a few simple steps, you can become a proud owner of a ToonVerse NFT.
-      <br>
-      <br>
+      
       - ToonVerse is an NFT development platform where you can stake your DevilCat to earn TOON cryptocurrency, use TOON to mint future collections, and explore other offerings on the ToonVerse marketplace. 
-      <br>
-      <br>
+      
       - Join us in growing the ToonVerse ecosystem by offering your own collections for TOON or ETH. Stay tuned for exciting updates as we continue to explore new frontiers in NFT technology.
-      <br>
-      <br>
+      
       - At ToonVerse, we're committed to providing an unparalleled experience for art collectors and enthusiasts. Join us today and be a part of the future of NFTs.
     </p>
+    <br>
+    <br>
     <h4>
       <button id="styled-mint-button" style="margin: 1%;"> <a style="margin: 10%;"
           href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code" style="margin: 10px;">View
@@ -36,7 +34,7 @@
 
     </h4>
   </div>
-
+  <br><br>
   <div class="card" id="card-mintDevilCat">
     <div class="container">
       <div class="card-body">
