--- a/src/app/components/mint/mint.component.scss
+++ b/src/app/components/mint/mint.component.scss
@@ -5,7 +5,7 @@
 }
 
 .card-lightblue:hover {
-    background-color: bisque;
+    background-color: rgba(255, 228, 196, 0);
     border-radius: 5%;
     transform: scale(1.05);
     // max-width: 60%;
