--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -46,14 +46,14 @@
   color: black;
   text-shadow: 1px 1px 1px #000;
   border-radius: 10px;
-  background-color: rgb(241, 175, 109);
+  background-color: rgba(241, 175, 109, 0);
   background-image: linear-gradient(
     to top left,
     rgba(0, 0, 0, 0.2),
     rgba(0, 0, 0, 0.2) 30%,
     rgba(0, 0, 0, 0)
   );
-  box-shadow: inset 2px 2px 3px rgb(241, 175, 109),
+  box-shadow: inset 2px 2px 3px rgba(241, 175, 109, 0),
     inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 }
 
@@ -81,7 +81,7 @@
 }
 
 .styled:hover {
-  background-color: rgb(241, 175, 109);
+  background-color: rgb(255, 2, 196);
   box-shadow: inset 2px 2px 3px rgb(108, 34, 46),
     inset -2px -2px 3px rgba(0, 0, 0, 0.6);
   font-size: 1.05rem;
