--- a/src/app/components/team/team.component.scss
+++ b/src/app/components/team/team.component.scss
@@ -32,7 +32,7 @@
 }
 
 #card-free-mints:hover{
-  background-color: bisque;
+  background-color: rgba(255, 228, 196, 0);
   border-radius: 5%;
   max-width: 70%;
   text-decoration: underline;
