--- a/src/app/components/viewcatz/viewcatz.component.scss
+++ b/src/app/components/viewcatz/viewcatz.component.scss
@@ -1,14 +1,14 @@
 #form-eth-address{
-    color: pink;
+    color: rgb(16, 15, 15);
 }
 
 #form-eth-address:hover{
-    background-color: gray;
+    background-color: black;
 }
 
 #typeText{
     border-radius: 0px;
-    background-color: pink;
+    background-color: aliceblue;
 }
  
 #card-lightblue{
@@ -37,7 +37,7 @@
   
   
   #card-lightblue-multi:hover{
-    background-color: bisque;
+    background-color: rgb(167, 213, 255);
     border-radius: 5%;
     transform: scale(1.05);
     text-decoration: underline;
