--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,8 +33,7 @@ p {
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #1976d2;
-  color: white;
+  background-color: rgb(167, 213, 255);
   font-weight: 600;
 }
 
@@ -57,8 +56,8 @@ p {
 .card {
   all: unset;
   border-radius: 4px;
-  border: 1px solid #eee;
-  background-color: #fafafa;
+  border: 1px solid rgba(238, 238, 238, 0);
+  background-color: #fafafa00;
   height: 40px;
   width: 200px;
   margin: 0 8px 16px;
@@ -94,8 +93,8 @@ p {
 }
 
 .card.highlight-card {
-  background-color: #1976d2;
-  color: white;
+  background-color: rgb(167, 213, 255);
+  color: rgba(255, 255, 255, 0);
   font-weight: 600;
   border: none;
   width: auto;
@@ -110,12 +109,12 @@ p {
 a,
 a:visited,
 a:hover {
-  color: #1976d2;
+  color: #ffffff;
   text-decoration: none;
 }
 
 a:hover {
-  color: #125699;
+  color: #ffffff;
 }
 
 footer {
