--- a/src/app/components/manage/manage.component.scss
+++ b/src/app/components/manage/manage.component.scss
@@ -9,12 +9,11 @@
   text-shadow: 1px 1px 1px #000;
   border-radius: 10px;
   background-color: aliceblue;
-  border: 1mm ridge pink;
 
 }
 
 #styled:hover {
-  background-color: bisque;
+  background-color: rgb(167, 213, 255);;
   transform: scale(1.05);
   text-decoration: underline;
 }
@@ -29,7 +28,7 @@
   color: black;
   text-shadow: 1px 1px 1px #000;
   border-radius: 10px;
-  background-color: bisque;
+  background-color: rgb(167, 213, 255);;
 
 }
 
@@ -54,7 +53,7 @@
 }
 
 #styled-mint-button:hover {
-  box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0);
 }
 
 
@@ -130,7 +129,7 @@
 
 
 #card-lightblue-multi:hover{
-  background-color: bisque;
+  background-color: rgb(167, 213, 255);;
   transform: scale(1.05);
   text-decoration: underline;
 
