--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -6,8 +6,7 @@
 
 
     <div class="container" style="margin-bottom: 100px; margin-top:25px">
-        <div class="row"
-            style="  justify-content: center; padding: 15px;background-color: aliceblue;border-bottom-style: double;">
+        <div class="row" id="marketplace-item">
             <div class="col-md-2">Collection Price</div>
             <div class="col-md-2"></div>
             <div class="col-md-2">Project</div>
