--- a/src/app/components/sourpuss/sourpuss.component.scss
+++ b/src/app/components/sourpuss/sourpuss.component.scss
@@ -20,7 +20,7 @@
   }
   
   #styled:hover {
-    background-color: bisque;
+    background-color: rgba(255, 228, 196, 0);
     transform: scale(1.05);
     text-decoration: underline;
   }
