--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -39,10 +39,12 @@
         </li>
         <li class="nav-item">
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/marketplace']">Marketplace</p>
+        </li> -->
+        <li class="nav-item">
+          <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/elgatodiablo']">El Gato Diablo</p>
         </li>
-
         <li class="nav-item">
           <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/buytoon']">Buy $TOON</p>
         </li>
